Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2200

the macro TS_HRTIME_xxx in proxy/api/ts/experimental.h is invalid when plugin use these macros

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • TS API
    • None

    Description

      such macro defines in proxy/api/ts/experimental.h:
      #define TS_HRTIME_FOREVER HRTIME_FOREVER
      #define TS_HRTIME_DECADE HRTIME_DECADE
      #define TS_HRTIME_YEAR HRTIME_YEAR
      #define TS_HRTIME_WEEK HRTIME_WEEK
      #define TS_HRTIME_DAY HRTIME_DAY
      #define TS_HRTIME_HOUR HRTIME_HOUR
      #define TS_HRTIME_MINUTE HRTIME_MINUTE
      #define TS_HRTIME_SECOND HRTIME_SECOND
      #define TS_HRTIME_MSECOND HRTIME_MSECOND
      #define TS_HRTIME_USECOND HRTIME_USECOND
      #define TS_HRTIME_NSECOND HRTIME_NSECOND
      ...

      The macros of HRTIME_xxx (such as HRTIME_SECOND) in lib/ts/ink_hrtime.h。
      Because the TS plugins SHOULD not include the header file ink_hrtime.h, so they can't use above macros like TS_HRTIME_xxx。

      Attachments

        Activity

          People

            happy_fish100 Yu Qing
            happy_fish100 Yu Qing
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: