TS-2200: define macro TS_HRTIME_XXX directly

old macro defines can NOT be used in plugin because the target macros
   defined in lib/ts/ink_hrtime.h